[project]
name = "mplsignal"
description = "Matplotlib extension for signal processing-related plots"
authors = [
{name = "Oscar Gustafsson", email = "oscar.gustafsson@gmail.com"}
]
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
dynamic = [
   "version"
]
dependencies = [
    "matplotlib",
    "adjustText"
    ]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
test = [
     "black",
     "pytest",
     "pytest-mpl"
     ]
doc = [
     "sphinx",
     "numpydoc",
     "sphinx_rtd_theme",
     "sphinx-copybutton",
     "sphinx-autobuild",
     "sphinx_gallery>=0.8.2",
     "autoapi",
     "furo",
     "scipy"
     ]

[project.urls]
Homepage = "https://github.com/oscargus/mplsignal"
Documentation = "https://mplsignal.readthedocs.io/"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
include = ["mplsignal*"]
exclude = ["doc*", "examples*", "mplsignal.tests*"]

[tool.setuptools_scm]
write_to = "mplsignal/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
parentdir_prefix_version = "mplsignal-"
fallback_version = "0.0+UNKNOWN"

[tool.black]
skip-string-normalization = true
line-length = 88

[tool.pytest.ini_options]
testpaths = [
    "mplsignal/tests"
]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["mplsignal"]

[tool.flake8]
max-line-length = 88
